# archived-litentry-web-app

./: .gitignore  Cargo.toml  README.md  index.html  test.html
src/: lib.rs  page_account_state.rs  pas.rs  pga.rs  pvr.rs
static/: styles.css
