[package]
name = "litentry-web-app"
version = "0.1.0"
authors = ["Aurora Execution <auroraexecution142857@gmail.com>"]
edition = "2018"


[lib]
crate-type = ["cdylib"]


[dependencies]
seed = "^0.4.0"
wasm-bindgen = "^0.2.45"
web-sys = "^0.3.19"

# For serialization, eg sending requests to a server. Otherwise, not required.
serde = { version = "^1.0.85", features = ['derive'] }
serde_json = "1.0"
futures = "^0.1.26"


[dev-dependencies]
wasm-bindgen-test = "0.2.45" # NOTE: keep in sync with wasm-bindgen version


[profile.release]  # Attempts to minimize file size
lto = true
opt-level = 'z'