[package]
name = "litentry-web-app"
version = "0.1.0"
authors = ["Aurora Execution <auroraexecution142857@gmail.com>"]
edition = "2018"


[lib]
crate-type = ["cdylib"]


[dependencies]
seed = "^0.4.0"
wasm-bindgen = "^0.2.45"
wasm-bindgen-futures = "0.3.22"
futures = "0.1"

# For serialization, eg sending requests to a server. Otherwise, not required.
serde = { version = "^1.0.85", features = ['derive'] }
serde_json = "1.0"

bardecoder = "0.1"
image = "0.21"

#js-sys = "*"
base64 = "0.10"

[dependencies.web-sys]
version = "0.3.27"
features = [
    "MediaDevices",
    "MediaStreamConstraints",
    "Navigator",
    "MediaStream",
    "HtmlMediaElement",
    "HtmlVideoElement",
    "HtmlCanvasElement",
    "HtmlImageElement",
    "CanvasRenderingContext2d",
]


[dev-dependencies]
wasm-bindgen-test = "0.2.45" # NOTE: keep in sync with wasm-bindgen version


[profile.release]  # Attempts to minimize file size
lto = true
opt-level = 'z'